--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
         steps:
             - uses: actions/checkout@v2
               with:
-                  ref: develop
+                  ref: master
 
             - name: Deploy to Server
               uses: easingthemes/ssh-deploy@v2.1.1
