--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
               env:
                     SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
                     ARGS: "-rltgoDzvO --delete"
-                    SOURCE: "dist/"
+                    SOURCE: "source/"
                     REMOTE_HOST: "project1.eaglesoftwareteam.com"
                     REMOTE_USER: ubuntu
-                    TARGET: "/var/www/html/todoapp-vue"
+                    TARGET: "/var/www/html/demo"
